# simulator

./: Cargo.toml  test.yaml  test3.yaml
simulations/terran_system/: config.yaml
src/: config.rs  force.rs  graphics.rs  lib.rs  main.rs  math.rs  output_adapter.rs  simulation.rs
src/graphics/: model.rs  trackball.rs
src/math/: matrix.rs  vector.rs
src/output_adapter/: csv_adapter.rs  stdout_adapter.rs
src/shaders/: depth.frag  geo.frag  geo.vert
