[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
itertools = "0.10.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
serde_arrays = "0.1.0"
clap = { version = "4.0.18", features = ["derive"] }
